src/Styles/styles.css
:root {
  background-color: black;

/*
  --test1: blue;
  --test2: orangered;
  --test3: yellow;
  --test4: blueviolet;
  --test5: pink;
  --test6: rebeccapurple;
  --test7: skyblue;
  --test8: orange;
  --test9: green;
*/
  --test1: transparent;
  --test2: transparent;
  --test3: transparent;
  --test4: transparent;
  --test5: transparent;
  --test6: transparent;
  --test7: transparent;
  --test8: transparent;
  --test9: transparent;
/**/  
}


h1, h2, h3, p,
.artTitle, 
.artDescription, 
.twitterHandleText,
.artistBioText,
.submitButton, 
.proceedButton,
.outputName
{
  overflow: hidden;
  margin: auto;
  text-align: center;
  color: white;
  font-family: 'Arimo';
}

h1 {
  padding-left: 5vw;
  padding-right: 5vw;
}

h2 {
  padding-left: 5vw;
  padding-right: 5vw;
}

h3 {
  padding: 0;
}

p {
  padding-left: 10vw;
  padding-right: 10vw;
  text-align: left;
  page-break-after: always;
}

a:link, a:visited, a:hover, a:active {
  text-decoration: none;
}

/*
Styling for Welcome page
*/

.welcome {
  width: 100%;
  height: 50vh;
  position:relative;

  display: flex;
  flex-direction: column;
}

/*
Card styling for the Carousel
*/

.card {
  background-color: black;
  position: relative;
  height: 100vh;
  width: 100%;
}
.artFrame {
  background-color: var(--test1);
  position: absolute;
  height: 70%;
  top: 0;
  width: 100%;
}
.artFile {
  background-color: var(--test2);
  position: absolute;
  object-fit: contain;
  height: 80%;
  width: 100%;
}

.artTitle {
  background-color: var(--test3);
  position: absolute;
  top: 81%;
  font-size: 3vh;
  width: 100%;
}

.artDescription {
  background-color: var(--test4);
  position: absolute;
  font-size: 1.5vh;
  top: 87%;
  height: 12%;
  width: 100%;
}
.artist {
  background-color: var(--test5);
  position: absolute;
  top: 71%;
  height: 21%;
  width: 100%;
}

.profileImage {
  border-radius: 50%;
  object-fit: cover;
  left: calc(50% - 2.5vh);
  position: absolute;
  height: 5vh;
}

.twitterHandleText {
  background-color: var(--test6);
  position: absolute;
  font-size: 2vh;
  height: 14%;
  top: 25%;
  width: 100%;
}

.artistBioText {
  background-color: var(--test7);
  position: absolute;
  font-size: 1vh;
  padding-left: 15vw;
  padding-right: 15vw;
  top: 40%;
  height: 55%;
  width: 100%;
}

.qrCodeFrame {
  background-color: var(--test8);
  top: 93%;
  height: 5vh;
  position: absolute;
  width: 100%;
}

.qrCodeImage {
  height: 100%;
  width: 100%;
  object-fit: contain;
  position: absolute;
  top: calc(50% - 2.5vh);
}

/*
Submission Screen Page
*/

.submissionScreen {
  width: 100%;
  min-height: 5em;

  display:flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  align-content: flex-start;
  gap: .5em .5em;
}

.inputBox {
  width: 100%;
  min-height: 5vh;
  text-align: center;
  top: 8vh;
}

.buttons {
  width: 100%;
  object-fit:contain;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;

}

.submitButton, 
.proceedButton {
  border-radius: .5em;
  padding: 1.2em;
  width: 40%;
  max-width: 12em;
  text-align: center;
  cursor:pointer;

}
.submitButton {
  background-color: #DC1FFF;
}

.proceedButton {
  background-color:  #00FFA3;
}

.submitButton:hover, .proceedButton:hover {
  background-color: #03E1FF;
}

/*
Preview Card(s) when submitting addresses
*/

.nftConfirm {
  /* This div holds all card previews*/
  width: 80vw;
  min-height: 28vh;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  align-content: flex-start;
  gap: .5em .5em;


}

.cardPreviewWrapper {
  object-fit:contain;
  border-style: outset;
  border-color: grey;
  border-width: .05em;
}

.cardPreview {
    /* This div hold all divs which make up one card preview, should populate*/
  background-color: black;
  width: 20vw;
  height: 35.6vw;
  position: relative;
  
}

.nftConfirm .artFrame {
  background-color: var(--test2);
}
.nftConfirm .artFile {
  background-color: var(--test3);
}

.nftConfirm .artTitle {
  background-color: var(--test4);
  font-size: 1.5vh;
}

.nftConfirm .artDescription {
  background-color: var(--test5);
  font-size: .8vh;
}
.nftConfirm .artist {
  background-color: var(--test6);
}

.nftConfirm .profileImage {
  left: calc(50% - 1.2vh);
  height: 2.4vh;
}

.nftConfirm .twitterHandleText {
  background-color: var(--test7);
  font-size: 1.2vh;
}

.nftConfirm .artistBioText {
  background-color: var(--test8);
  padding-left: 1em;
  padding-right: 1em;
  font-size: .6vh;
}

.nftConfirm .qrCodeFrame {
  background-color: var(--test9);
  height: 1.8vh;
}

.nftConfirm .qrCodeImage {
  top: calc(50% - 1vh);
}



/*
mobile and tablet font/image size adjustments 
*/
@media only screen and (max-width: 400px) {
  .nftConfirm .artTitle {
    font-size: .7vh;
  }

  .nftConfirm .artDescription {
    font-size: .3vh;
  }

  .nftConfirm .profileImage {
    left: calc(50% - .5vh);
    height: 1vh;
  }

  .nftConfirm .twitterHandleText {
    font-size: .6vh;
  }

  .nftConfirm .artistBioText {
    padding-left: .5em;
    padding-right: .5em;
    font-size: .25vh;
  }

  .nftConfirm .qrCodeFrame {
    height: .8vh;
  }

  .nftConfirm .qrCodeImage {
    top: calc(50% - .5vh);
  }
}

@media only screen and (min-width: 401px) and (max-width: 960px) {
  .nftConfirm .artTitle {
    font-size: .7vh;
  }

  .nftConfirm .artDescription {
    font-size: .3vh;
  }

  .nftConfirm .profileImage {
    left: calc(50% - .5vh);
    height: 1vh;
  }

  .nftConfirm .twitterHandleText {
    font-size: .6vh;
  }

  .nftConfirm .artistBioText {
    padding-left: .5em;
    padding-right: .5em;
    font-size: .25vh;
  }

  .nftConfirm .qrCodeFrame {
    height: .8vh;
  }

  .nftConfirm .qrCodeImage {
    top: calc(50% - .5vh);
  }
}

